<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nm_add_to_ril" comment="share target label">Add to NeverReader</string>
	<string name="nm_add_tags" comment="Title of a page">Add Tags</string>
	<string name="nm_theme_light" comment="Appearance/color of the app">Light</string>
	<string name="nm_theme_dark" comment="Appearance/color of the app">Dark</string>
	<string name="clipboard_label_url">Link copied</string>
	<string name="nm_archive" comment="Title in the main menu of the action bar. This is a noun.">Archive</string>
	<string name="nm_link">Link</string>
	<plurals name="nm_time_estimate" comment="Short label showing the number of minutes to read a story, watch a video, or listen to an article e.g. '5 min'">
		<item quantity="other">%1$d min</item>
	</plurals>
	<plurals name="nm_time_to_read_estimate" comment="Short label showing the number of minutes to read a story, watch a video, or listen to an article e.g. '5 min read'">
		<item quantity="other">%1$d min read</item>
	</plurals>
	<plurals name="nm_time_left_estimate" comment="Short label showing the number of minutes to read a story, watch a video, or listen to an article e.g. '5 min left'">
		<item quantity="other">%1$d min left</item>
	</plurals>
	<string name="ac_login">Log in</string>
	<string name="ac_logout">Log out</string>
	<string name="ac_authenticate">Sign up or sign in</string>
	<string name="ac_continue_signed_out" comment="A button next to a 'Sign up or sign in' button, that allows you to go to the Home screen without signing up or signing in.">Skip sign in</string>
	<string name="ac_cancel">Cancel</string>
	<string name="ac_close_app">Close app</string>
	<string name="ac_ok">OK</string>
	<string name="ac_yes">Yes</string>
	<string name="ac_no">No</string>
	<string name="ac_retry">Retry</string>
	<string name="ac_try_again">Try Again</string>
	<string name="ac_create_new_cache">Create new cache</string>
	<string name="ac_clear_cache">Clear cache</string>
	<string name="ac_get_help">Get Help</string>
	<string name="ac_submit">Submit</string>
	<string name="ac_write_review" comment="link to leave a review on the application store">Review</string>
	<string name="ac_next">Next</string>
	<string name="ac_got_it_caps">GOT IT</string>
	<string name="ac_continue">Continue</string>
	<string name="ac_discard_changes">Discard Changes</string>
	<string name="ac_continue_editing">Continue Editing</string>
	<string name="ac_add_new_tag">add new tag <b>\‘{name_of_tag}\‘</b></string>
	<string name="ac_undo">UNDO</string>
	<string name="ac_highlight" comment="Label for button that highlights selected text">@string/ic_highlight</string>
	<string name="ac_copy">@string/ic_copy</string>
	<string name="ac_translate">Translate</string>
	<string name="ac_web_search">Web Search</string>
	<string name="ac_select_all">Select All</string>
	<string name="ac_clear">Clear</string>
	<string name="ac_share">Share</string>
	<string name="ac_maybe_later">Maybe later</string>
	<string name="ac_install">Install</string>
	<string name="lb_tab_saves">Saves</string>
	<string name="lb_continue_reading" comment="should be all upper case">CONTINUE READING</string>
	<string name="lb_add_copied_url" comment="a title asking the user if they would like to save a URL from their device clipboard">Save Copied URL?</string>
    <string name="lb_slower" comment="Speaking rate of the Text To Speech">Speak Slower</string>
    <string name="lb_faster" comment="Speaking rate of the Text To Speech">Speak Faster</string>
    <string name="lb_tts_language">Language</string>
    <string name="lb_tts_voice">Voice</string>
	<string name="lb_select_tags_hint">Select or enter a tag</string>
    <string name="lb_select_tags_hint_no_tags">Enter a tag</string>
	<plurals comment="Header above the list of item" name="lb_selected">
		<item quantity="one">%1$s selected</item>
		<item quantity="other">%1$s selected</item>
	</plurals>
	<string name="lb_suggested_tags">Suggested Tags</string>
	<string name="lb_all_tags">All Tags</string>
	<string name="lb_recent_tags">Recent Tags</string>
	<string name="lb_tags_autocomplete">Tags</string>
	<string name="lb_downloading_items_notification" comment="the number of items being currently downloaded for offline viewing. this number will count down as downloading progresses">Downloading {number_of_items} Items&#8230;</string>
	<string name="lb_search_hint">Search</string>
	<string name="lb_list_search_hint">Search your list</string>
	<string name="lb_list_archive_search_hint">Search your archive</string>
	<string name="lb_recent_searches_sc">Recent searches</string>
	<string name="lb_time_to_read" comment="Header for a section of filters that let you view a subset of your saved articles based on their length.">Time to read</string>
	<string name="lb_sort_by">Sort by</string>
	<string name="lb_sort_by_newest">Newest saved</string>
	<string name="lb_sort_by_oldest">Oldest saved</string>
	<string name="lb_sort_by_newest_archive">Newest archived</string>
	<string name="lb_sort_by_oldest_archive">Oldest archived</string>
	<string name="lb_sort_by_shortest">Shortest to read</string>
	<string name="lb_sort_by_longest">Longest to read</string>
    <string name="mu_settings" comment="this text label should be short">Settings</string>
	<string name="mu_read_later" comment="this text label should be short">Save for later</string>
	<string name="mu_help" comment="this text label should be short">Help</string>
	<string name="mu_copy_link" comment="this text label should be short">Copy Link</string>
	<string name="mu_report_article_view" comment="this text label should be short">Report Article Problem</string>
	<string name="mu_refresh" comment="this text label should be short">Refresh</string>
	<string name="mu_find_in_page" comment="this text label should be short">Find in Page</string>
	<string name="mu_display_settings" comment="this text label should be short">Text Settings</string>
	<string name="mu_delete" comment="this text label should be short">Delete</string>
	<string name="mu_view_original">View Original</string>
	<string name="mu_switch_to_article" comment="this text label should be short">Switch to Article View</string>
	<string name="mu_add_tags" comment="this text label should be short">Add Tags</string>
	<string name="mu_favorite" comment="this text label should be short">Favorite</string>
	<string name="mu_unfavorite" comment="this text label should be short">Unfavorite</string>
	<string name="mu_home" comment="this text label should be short">Home</string>
	<string name="mu_saves" comment="this text label should be short">Saves</string>
	<string name="mu_annotations" comment="This text label should be short. Here 'Highlights' references a new feature where a user can highlight text in articles to save memorable quotes.">Highlights</string>
	<string name="mu_premium" comment="this text label should be short">Premium</string>
	<string name="mu_untagged" comment="make sure this phrase matches what is in setting_untagged_label and setting_untagged_sum">not tagged</string>
	<string name="dg_loading">Loading&#8230;</string>
	<string name="dg_changing_data_location">Changing Storage Location&#8230;</string>
	<string name="dg_clearing_cache">Clearing Cache&#8230;</string>
	<string name="dg_logging_out">Logging out&#8230;</string>
	<string name="dg_c2dm_registering">Setting up your device to receive push notifications&#8230;</string>
	<string name="dg_fetching">Retrieving your list&#8230;</string>
    <string name="dg_error_t">Oops</string>
    <string name="dg_confirm_t">Are you sure?</string>
    <string name="dg_changes_not_saved_t">Changes not saved</string>
    <string name="dg_sync_error_t">Sync error</string>
	<string name="dg_fetch_error_t">Could not load list</string>
	<string name="dg_fetch_error_m">There was a problem fetching your list from the server. Please make sure you are connected to the internet and try again.</string>
	<string name="dg_no_connection_m">There was an error trying to connect, please make sure your device is connected to the internet and try again.</string>
    <string name="dg_unexpected_m">Uh oh, something unexpected happened. Please try again, if you continue to have problems please let us know.</string>
    <string name="dg_report_error_m">Would you like to report this error?</string>
	<string name="dg_no_email_app_t">Cannot Send Email</string>
	<string name="dg_no_email_app_m">This device does not have any email apps installed.</string>
	<string name="dg_no_email_app_m_support">If you want to try from another device, our email address is support@neverreader.app.</string>
	<string name="dg_storage_setting_unavailable_t">Storage Location Inaccessible</string>
	<string name="dg_storage_setting_unavailable_m">That storage location is currently unavailable. Please make sure the storage card or device is connected properly. Also make sure it is not currently being used as external storage to a computer via USB.</string>
	<string name="bg_offline_cache_storage_is_unavailable_t">Offline Content Inaccessible</string>
	<string name="bg_offline_cache_storage_is_unavailable_m">The storage location your offline cache is saved on is currently unavailable. This can happen if your device is connected to a computer via USB, if you removed the storage card, or if you revoked the app\'s "Storage" permission. Please undo this change and try again. Otherwise you can switch to a new cache in the app\'s Internal Storage.</string>
	<string name="bg_offline_cache_is_missing_t">Offline Content Inaccessible</string>
	<string name="bg_offline_cache_is_missing_m">Your offline cache cannot be found. Please make sure that your offline storage location properly connected. If you rearranged or modified the caches files, please restore them and try again.</string>
	<string name="dg_offline_cache_is_missing_permission_t">Offline Content Inaccessible</string>
	<string name="dg_offline_cache_is_missing_permission_m">The app no longer has the "Storage" permission and cannot access the offline cache. To continue using an external storage location, please reenable the "Storage" permission for the app, or switch to Internal storage instead.</string>
	<string name="dg_sdcard_confirm_change_m">Changing storage locations will clear your downloaded files.</string>
	<string name="dg_out_of_space_t">Out of Storage Space</string>
	<string name="dg_out_of_space_m">the app\'s offline storage location is out of space. The app requires additional free space to function. Please free some space up to continue. To clear up space, you may want to clear the app\'s offline cache.</string>
	<string name="dg_after_clear_m">If your device has limited memory, use the app\'s "{name_of_storage_setting}" Setting to limit how much space the cache can use.</string>
	<string name="dg_clear_cache_t">Are you sure?</string>
	<string name="dg_clear_cache_m">This will delete any files that have been saved for offline viewing.</string>
	<string name="dg_confirm_create_new_cache_m">This will clear your existing offline cache and start using the internal device storage instead.</string>
	<string name="dg_forced_logout_t">Please Log In</string>
	<string name="dg_forced_logout_m">You have been logged out from another location. Please log in again.</string>
	<string name="dg_tag_too_long_m">Tags may only be 25 characters or less.</string>
    <string name="auth_title" translatable="false">Connect to your server</string>
    <string name="auth_subtitle" translatable="false">NeverReader is a read-it-later client for your self-hosted Readeck or Wallabag server.</string>
    <string name="auth_backend_readeck" translatable="false">Readeck</string>
    <string name="auth_backend_wallabag" translatable="false">Wallabag</string>
    <string name="auth_server_url_hint" translatable="false">Server URL (https://…)</string>
    <string name="auth_authorize" translatable="false">Authorize</string>
</resources>